# arcaflow-plugins-incubator

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  input.yaml  pyproject.toml  server_input.yaml  test_uperf_plugin.py  uperf_plugin.py
.github/workflows/: build.yml
go/: .gitignore  .golangci.yml
input/: input.yaml  server_input.yaml
profiles/: sample.xml
python/: .gitignore  README.md
python/_example_plugin/: Dockerfile  README.md  example_plugin.py  requirements.txt  test_example_plugin.py
python/fio/: Dockerfile  README.md  fio_plugin.py  fio_schema.py  pyproject.toml  requirements.txt  test_fio_plugin.py
python/fio/fixtures/: poisson-rate-submission_input.yaml  poisson-rate-submission_output-plus.json
python/iperf/: Dockerfile  README.md  docker-compose.yaml  iperf_plugin.py  iperf_schema.py  test_iperf_plugin.py
python/smallfile/: Dockerfile  README.md  requirements.txt  smallfile-example.yaml  smallfile_plugin.py  smallfile_schema.py  test_smallfile_plugin.py
python/stressng/: Dockerfile  README.md  reference_jobfile  requirements.txt  stressng_example.yaml  stressng_plugin.py  test_stressng_plugin.py
python/stressng-plugin/: Dockerfile  README.md  requirements.txt  stressng_example.yaml  stressng_plugin.py  test_stressng_plugin.py
python/sysbench/: Dockerfile  README.md  requirements.txt  sysbench_plugin.py  test_sysbench_plugin.py
python/uperf/: Dockerfile  README.md  docker-compose.yaml  input.schema.json  requirements.txt  test_uperf_plugin.py  uperf_plugin.py  uperf_schema.py
python/wait/: Dockerfile  README.md  (+3 more)
(+18 files in other folders)
