[tool.poetry]
name = "arca_fio_plugin"
version = "0.1.0"
description = ""
authors = ["Matthew F Leader"]
license = "Apache-2.0+GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.4.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
PyYAML = "^6.0"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
preview = "true"
experimental-string-process = "true"